@@ -2,6 +2,10 @@
 
 Changes with Apache 2.4.21
 
+  *) mod_proxy_fcgi: Avoid passing a filename of proxy:fcgi:// as
+     SCRIPT_FILENAME to a FastCGI server. PR59618.
+     [Jacob Champion <champion.pxi gmail.com>]
+
   *) mod_dav: Add dav_get_provider_name() function to obtain the name
      of the provider from mod_dav.
      [Jari Urpalainen <jari.urpalainen nokia.com>]
